Add jSpecify node.metrics.evaluator/harvester packages.